[package]
name = "poloniex"
version = "0.1.0"
authors = ["Arne Simon <arne_simon@gmx.de>"]
description = "REST API for the poloniex market place."
license = "MIT"
documentation = "https://docs.rs/poloniex"
homepage = "https://github.com/void-dragon/poloniex"
repository = "https://github.com/void-dragon/poloniex"

[dependencies]
curl = "*"
rust-crypto = "*"
serde = "1"
serde_derive = "1"
serde_json = "1"
